[package]
name = "home-router-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
libc = "0.2"
neli = "0.7.0-rc3"
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }

[lints.clippy]
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
