[package]
name = "home-router-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
libc = "0.2"
neli = "0.7.0-rc3"
prometheus = "0.13"
surge-ping = "0.8"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }

[lints.clippy]
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
