[package]
name = "home-router-exporter"
version = "0.1.0"
authors = ["Chia-I Wu"]
edition = "2024"
rust-version = "1.85"
description = "Prometheus exporter designed for home routers"
repository = "https://github.com/olvaffe/home-router-exporter"
license = "MIT"
keywords = ["prometheus", "metrics", "exporter", "router"]
categories = ["visualization"]

[dependencies]
anyhow = "1"
clap = "4"
env_logger = "0.11"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
libc = "0.2"
log = "0.4"
neli = "0.7.0-rc3"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }

[lints.clippy]
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
